--- a/content/blog/hello-world.mdx
+++ b/content/blog/hello-world.mdx
@@ -2,7 +2,7 @@
 title: Hello World
 description: This is our first Blog post
 date: 2024-08-11
-published: true
+published: false
 ---
 
 # Hi there
